Fix dialogue foundation config support